[gd_scene load_steps=2 format=3 uid="uid://bk5vnp8aohx7s"]

[ext_resource type="Script" path="res://scenes/career_quest/career_hub.gd" id="1"]

[node name="CareerHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.25, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚Üê Back"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProgressLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Progress: 0/4 Careers Completed (0%)"
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Choose Your Career Path"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select a career to explore its challenges and opportunities"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 2

[node name="SoftwareDevButton" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Software Developer
üíª Code & Debug"

[node name="HealthcareButton" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Healthcare Professional
üè• Heal & Care"

[node name="TeacherButton" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Teacher/Educator
üìö Teach & Inspire"

[node name="BusinessButton" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Business Manager
üìä Lead & Strategy"
